Fix header coin icon vertical alignment

--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ body {
 .header-coin-icon {
   width: 24px;
   height: 24px;
-  vertical-align: middle;
+  vertical-align: -4px;
   filter: drop-shadow(0 1px 3px rgba(212, 160, 23, 0.6));
 }
 
